# ApkParser

./: .gitignore  README.md
ApkDownloader/: Makefile  docker-compose.yml  main.py  pyproject.toml  yoyo.ini
ApkDownloader/app/: app.py
ApkDownloader/migration/: 20230114_01_GoSlX-base.py
ApkParser/: Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  test.py  yoyo.ini
ApkParser/app/: app.py
ApkParser/app/config/: __init__.py  config.py
ApkParser/app/controller/v1/handler/: __init__.py  link.py
ApkParser/app/controller/v1/http/: controller.py  link.py
ApkParser/app/controller/v1/schema/: __init__.py  link.py
ApkParser/app/core/auth/model/: __init__.py
ApkParser/app/core/initer/: __init__.py  exception.py  main.py
ApkParser/app/core/namespace/: __init__.py
ApkParser/app/core/parser/: __init__.py  main.py  test.py
ApkParser/app/core/parser/model/: __init__.py  download.py
ApkParser/app/core/schema/: __init__.py  base.py
ApkParser/app/crud/: __init__.py  crud.py
ApkParser/app/crud/postgresql/: __init__.py  client.py  link.py
ApkParser/app/crud/redis/: __init__.py  auth.py
ApkParser/app/model/: __init__.py  client.py  link.py
ApkParser/app/pkg/arch/: __init__.py  controller.py
ApkParser/app/pkg/database/: __init__.py  postgresql.py  redis.py
ApkParser/app/pkg/exception/: exception.py
ApkParser/app/pkg/rabbit/: consumer.py
ApkParser/app/pkg/rabbit/exception/: base.py
ApkParser/app/program/: __init__.py  app.py  http.py  parser.py
ApkParser/migration/: 20230110_01_dGBfn-base.py
ApkParser/script/: migration.sh
(+53 files in other folders)
