[tool.poetry]
name = "apkparser"
version = "0.1.0"
description = ""
authors = ["GauterHeart <78210321+GauterHeart@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.0"
asyncpg = "^0.27.0"
python-dotenv = "^0.21.0"
aio-pika = "^8.3.0"
httpx = "^0.23.3"
beautifulsoup4 = "^4.11.1"
uvicorn = "^0.20.0"
lxml = "^4.9.2"
cryptography = "^39.0.0"
aioredis = "^2.0.1"
loguru = "^0.6.0"
ujson = "^5.7.0"
psycopg2 = "^2.9.5"
selenium = "^4.7.2"


[tool.poetry.group.dev.dependencies]
yoyo-migrations = "^8.2.0"
mypy = "^0.991"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"
types-ujson = "^5.7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
disallow_untyped_defs = true
exclude = "venv|tests"
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
